--- a/SWTSwingTests/build.xml
+++ b/SWTSwingTests/build.xml
@@ -2,6 +2,7 @@
 <project name="SWTSwing Tests Build Script" default="createJar">
 
   <target name="createJar" description="Create the Jar files">
+    <delete file="../SWTSwing/SWTSwingTests.jar"/>
     <jar duplicate="preserve" destfile="../SWTSwing/SWTSwingTests.jar">
       <fileset dir="bin"/>
       <fileset dir="../org.eclipse.swt.snippets/bin"/>
