- Tracker is partially implemented.

--- a/SWTSwing/.cvsignore
+++ b/SWTSwing/.cvsignore
@@ -9,3 +9,7 @@ napkinlaf.jar
 swt-gdip-win32-3232.dll
 synthetica.jar
 substance.jar
+swt-awt-swing-3232.dll
+swt-gdip-swing-3232.dll
+swt-swing-3232.dll
+swt-wgl-swing-3232.dll
