--- a/SWTSwing/.classpath
+++ b/SWTSwing/.classpath
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="Eclipse SWT/common" kind="src"/>
-	<classpathentry path="Eclipse SWT/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT Accessibility/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT AWT/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT Browser/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT Custom Widgets/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT Drag and Drop/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT PI/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT Printing/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT Program/swing" kind="src"/>
-	<classpathentry path="Eclipse SWT Swing/swing" kind="src"/>
-	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
-	<classpathentry path="/org.eclipse.swt" kind="src"/>
-	<classpathentry path="bin" kind="output"/>
+	<classpathentry kind="src" path="Eclipse SWT/common"/>
+	<classpathentry kind="src" path="Eclipse SWT/swing"/>
+	<classpathentry kind="src" path="Eclipse SWT Accessibility/swing"/>
+	<classpathentry kind="src" path="Eclipse SWT AWT/swing"/>
+	<classpathentry kind="src" path="Eclipse SWT Browser/swing"/>
+	<classpathentry kind="src" path="Eclipse SWT Drag and Drop/swing"/>
+	<classpathentry kind="src" path="Eclipse SWT PI/swing"/>
+	<classpathentry kind="src" path="Eclipse SWT Printing/swing"/>
+	<classpathentry kind="src" path="Eclipse SWT Program/swing"/>
+	<classpathentry kind="src" path="Eclipse SWT Swing/swing"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="/org.eclipse.swt"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
