--- a/SWTSwing/build.xml
+++ b/SWTSwing/build.xml
@@ -5,7 +5,7 @@
     <delete file="SWTSwing.jar"/>
     <jar duplicate="preserve" destfile="SWTSwing.jar">
       <fileset dir="bin"/>
-      <fileset dir="../org.eclipse.swt/bin">
+      <fileset dir="../../eclipse.platform.swt/bundles/org.eclipse.swt/bin">
         <exclude name="library/**"/>
         <exclude name="org/eclipse/swt/ole/**"/>
         <exclude name="org/eclipse/swt/internal/ole/**"/>
