--- a/SWTSwing/.classpath
+++ b/SWTSwing/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="Eclipse SWT/common"/>
+	<classpathentry kind="src" path="Eclipse SWT Browser/common"/>
 	<classpathentry kind="src" path="Eclipse SWT/swing"/>
 	<classpathentry kind="src" path="Eclipse SWT Accessibility/swing"/>
 	<classpathentry kind="src" path="Eclipse SWT AWT/swing"/>
